Fixed Bug for alignment

--- a/index.css
+++ b/index.css
@@ -37,8 +37,14 @@ button{
 button:hover{
     transform: scale(1.02);
     transition: all 0.3s ease-in-out;
+    background: whitesmoke;
 }
-
+.input-button-group{
+    margin-top: 10px;
+}
+.operator-button{
+    font-weight: 700;
+}
 @media (max-width:600px){
     *{
         margin: 0;
